<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_sweets"
            android:title="@string/nav_sweets"/>
        <item
            android:id="@+id/nav_shops"
            android:title="@string/nav_shops"/>

        <item
            android:id="@+id/nav_brands"
            android:title="@string/nav_brands"/>

        <item
            android:id="@+id/nav_popular"
            android:title="@string/nav_popular"/>
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/nav_contact_us"/>
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"/>
    </group>
</menu>