<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_heading_0"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_28"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:id="@+id/headingtextview0"
        android:textStyle="normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_heading_1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/headingtextview1"
        android:layout_below="@id/headingtextview0"
        android:textStyle="normal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headingtextview1"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            app:hintEnabled="true"
            android:hint="@string/email_hint"
            android:layout_marginLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:id="@+id/emailEdittext"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            app:hintEnabled="true"
            android:hint="@string/pass_hint"
            android:layout_marginLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:id="@+id/passEdittext"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@android:color/white"
            android:background="@android:color/black"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/loginButton"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/login_page_bottom_text_1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/login_page_bottom_text_2"
                android:layout_marginLeft="5dp"
                android:id="@+id/accountTextview"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>