<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative01"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/bckImgbutton"
                android:src="@drawable/baseline_arrow_back_black_36"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_page_heading_0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_28"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                android:textStyle="normal"/>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_page_heading_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/relative01"
            android:id="@+id/headingtextview1"
            android:textStyle="normal"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            app:hintEnabled="true"
            android:hint="@string/name_hint"
            android:layout_marginLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:id="@+id/nameEdittext"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            app:hintEnabled="true"
            android:hint="@string/mobile_hint"
            android:layout_marginLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"
                android:id="@+id/mobileEdittext"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            app:hintEnabled="true"
            android:hint="@string/email_text"
            android:layout_marginLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:id="@+id/emailEdittext"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            app:hintEnabled="true"
            android:hint="@string/pass_hint"
            android:layout_marginLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/passEdittext"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            app:hintEnabled="true"
            android:hint="@string/confirm_pass_text"
            android:layout_marginLeft="50dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/confirmEdittext"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn_text"
            android:textColor="@android:color/white"
            android:background="@android:color/black"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:id="@+id/registerButton"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/register_page_bottom_text_1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/register_page_bottom_text_2"
                android:layout_marginLeft="5dp"
                android:id="@+id/accountTextview"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
